@@ -1,5 +1,5 @@
 <?php
-// $Id: views_plugin_pager.inc,v 1.1.4.4 2010-02-07 13:17:04 dereine Exp $
+// $Id: views_plugin_pager.inc,v 1.1.4.5 2010-02-07 13:26:07 dereine Exp $
 
 /**
  * The base plugin to handle pager.
@@ -178,5 +178,23 @@ class views_plugin_pager extends views_plugin {
   function has_more_records() {
     return $this->get_items_per_page()
       && $this->total_items > (intval($this->current_page) + 1) * $this->get_items_per_page();
+  }
+
+  function exposed_form_alter(&$form, &$form_state) { }
+
+  function exposed_form_validate(&$form, &$form_state) { }
+
+  function exposed_form_submit(&$form, &$form_state, &$exclude) { }
+
+  function uses_exposed() {
+    return FALSE;
+  }
+
+  function items_per_page_exposed() {
+    return FALSE;
+  }
+
+  function offset_exposed() {
+    return FALSE;
   }
 }
