@@ -1,5 +1,5 @@
 <?php
-// $Id: theme.inc,v 1.84.4.7 2010-02-06 13:29:48 dereine Exp $
+// $Id: theme.inc,v 1.84.4.8 2010-02-07 13:26:07 dereine Exp $
 
 /**
  * @file theme.inc
@@ -606,6 +606,19 @@ function template_preprocess_views_exposed_form(&$vars) {
     $vars['widgets']['checkboxes'] = $widget;
   }
 
+  if (isset($form['sort_by'])) {
+    $vars['sort_by'] = drupal_render($form['sort_by']);
+    $vars['sort_order'] = drupal_render($form['sort_order']);
+  }
+  if (isset($form['items_per_page'])) {
+    $vars['items_per_page'] = drupal_render($form['items_per_page']);
+  }
+  if (isset($form['offset'])) {
+    $vars['offset'] = drupal_render($form['offset']);
+  }
+  if (isset($form['reset'])) {
+    $vars['reset_button'] = drupal_render($form['reset']);
+  }
   // This includes the submit button.
   $vars['button'] = drupal_render_children($form);
 }
