@@ -1,5 +1,5 @@
 <?php
-// $Id: views-exposed-form.tpl.php,v 1.4.6.2 2009-11-18 20:37:42 merlinofchaos Exp $
+// $Id: views-exposed-form.tpl.php,v 1.4.6.3 2010-02-07 13:26:07 dereine Exp $
 /**
  * @file views-exposed-form.tpl.php
  *
@@ -10,6 +10,11 @@
  * - $widget->label: The visible label to print. May be optional.
  * - $widget->operator: The operator for the widget. May be optional.
  * - $widget->widget: The widget itself.
+ * - $sort_by: The select box to sort the view using an exposed form.
+ * - $sort_order: The select box with the ASC, DESC options to define order. May be optional.
+ * - $items_per_page: The select box with the available items per page. May be optional.
+ * - $offset: A textfield to define the offset of the view. May be optional.
+ * - $reset_button: A button to reset the exposed filter applied. May be optional.
  * - $button: The submit button for the form.
  *
  * @ingroup views_templates
@@ -41,6 +46,29 @@
         </div>
       </div>
     <?php endforeach; ?>
+    <?php if (!empty($sort_by)): ?>
+      <div class="views-exposed-widget">
+        <?php print $sort_by; ?>
+      </div>
+      <div class="views-exposed-widget">
+        <?php print $sort_order; ?>
+      </div>
+    <? endif; ?>
+    <?php if (!empty($items_per_page)): ?>
+      <div class="views-exposed-widget">
+        <?php print $items_per_page; ?>
+      </div>
+    <? endif; ?>
+    <?php if (!empty($offset)): ?>
+      <div class="views-exposed-widget">
+        <?php print $offset; ?>
+      </div>
+    <? endif; ?>
+    <?php if (!empty($reset_button)): ?>
+      <div class="views-exposed-widget">
+        <?php print $reset_button; ?>
+      </div>
+    <? endif; ?>
     <div class="views-exposed-widget">
       <?php print $button ?>
     </div>
